[package]
name = "fred_api"
version = "0.1.0"
edition = "2021"

[dependencies.http]
version = "0.2.9"

[dependencies.hyper]
version = "0.14.27"
features = ["http1"]

[dependencies.hyper-tls]
version = "0.5.0"

[dependencies.regex]
version = "1.9.5"

[dependencies.sled]
version = "0.34.7"

[dependencies.tokio]
version = "1.34.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tokio-test]
version = "0.4.3"
