[package]
name = "fred_api"
version = "0.1.3"
edition = "2021"
description = "API for Federal Reserve Economic Data (FRED)."
license = "MIT"
repository = "https://github.com/ericfindlay/fred_api"
keywords = ["api", "fred", "economics", "finance"]

[dependencies]
http = "0.2.9"
hyper = { version = "0.14.27", features = ["http1"] }
hyper-tls = "0.5.0"
regex = "1.9.5"
sled = "0.34.7"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.3"
