[package]
name = "fred_api"
version = "0.1.7"
edition = "2021"
description = "API for Federal Reserve Economic Data (FRED)."
license = "MIT"
repository = "https://github.com/ericfindlay/fred_api"
keywords = ["api", "fred", "economics", "finance"]

[dependencies]
debug_err = "0.1.0"

http = "1.3.1"
http-body-util = { version = "0.1.3", features = [] }

hyper = { version = "1.7.0", features = ["http2"] }
hyper-rustls = { version = "0.27.7", features = ["http2", "ring", "native-tokio"], default-features = false }
hyper-util = { version = "0.1.16", features = ["client"] }

quick-xml = "0.38.3"

rustls = { version = "0.23.31", features = ["ring"], default-features = false }
rustls-webpki = { version = "0.103.4", features = ["ring"], default-features = false }

sled = "0.34.7"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
lazy_static = "1.5.0"
tempfile = "3.22.0"
tokio-test = "0.4.4"

